get check boxes values and  chosen ingredients array

--- a/index.css
+++ b/index.css
@@ -2,15 +2,19 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0;
 }
 
-
+main {
+    
+}
 
 ul {
     display: flex;
     flex-direction: row;
-    width: 95%;
+    width: 110%;
     justify-content: space-between;
+    padding: 0;
 }
 
 li {
